# 153957-theme

./: .editorconfig  .gitignore  .travis.yml  Makefile  README.md  README.rst  index.html  pyproject.toml  setup.cfg  setup.py
.github/workflows/: demo.yml  flake8.yml  tests.yml
153957_theme/: full_menu.py  theme.py
153957_theme/static/css/: style.css
153957_theme/templates/: base.html  index.html
Long menu/: index.html
Long menu/In Utrecht/: index.html
Long menu/It seems to be getting longer/: index.html
Long menu/Just about there/: index.html
Long menu/Just this/: index.html
Long menu/Look here/: index.html
Long menu/More where that came from/: index.html
Long menu/Not even close/: index.html
Long menu/Not yet/: index.html
Long menu/Other menu items just for filler/: index.html
Long menu/Really quite long/: index.html
Long menu/Really really long, which refers to this title, not the length of the menu, which also has considereable length/: index.html
Long menu/Still not the end/: index.html
Long menu/There is even more/: index.html
Long menu/There yet?/: index.html
Long menu/They allowed this to be here?/: index.html
Long menu/This is also in the menu/: index.html
Long menu/This is also just to make it longer/: index.html
Long menu/This is not all/: index.html
Long menu/Very long menu/: index.html
Long menu/Were is the end/: index.html
Long menu/Where is the end/: index.html
Long menu/Yes, almost there/: index.html
Long menu/Zero items after this/: index.html
Nine levels deep/: index.html
Nine levels deep/Limbo/: index.html
Nine levels deep/Limbo/Lust/: index.html
Nine levels deep/Limbo/Lust/Gluttony/: index.html
Nine levels deep/Limbo/Lust/Gluttony/Greed/: index.html
Nine levels deep/Limbo/Lust/Gluttony/Greed/Wrath/: index.html
Nine levels deep/Limbo/Lust/Gluttony/Greed/Wrath/Heresy/: index.html
Nine levels deep/Limbo/Lust/Gluttony/Greed/Wrath/Heresy/Violence/: index.html
Nine levels deep/Limbo/Lust/Gluttony/Greed/Wrath/Heresy/Violence/Fraud/: index.html
Nine levels deep/Limbo/Lust/Gluttony/Greed/Wrath/Heresy/Violence/Fraud/Treachery/: index.html
Poles/: index.html
Sequences/: index.html
Sequences/Candle/: index.html
Sequences/Tree/: index.html
Time-Lapse/: index.html
demo/: Makefile  sigal.conf.py
plugins/: full_menu.py
static/classic/: galleria.classic.css
static/css/: style.css
templates/: index.html  menu.html
tests/: test_full_menu.py
theme_153957/: full_menu.py  theme.py
theme_153957/static/css/: style.css
theme_153957/static/js/: gallery.js
theme_153957/templates/: base.html  menu.html
