[metadata]
name = 153957-theme
version = 1.0.0
url = http://github.com/153957/153957-theme/
author = Arne de Laat
author_email = arne@delaat.net
maintainer = Arne de Laat
maintainer_email = arne@delaat.net
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Markup :: HTML
license = MIT
description = Theme for sigal generated photo albums
long_description = file: README.rst
keywords =
    photo album
    theme
    sigal
    galleria

[options]
packages =
    153957_theme
install_requires =
    sigal

[options.extras_require]
test =
    flake8
    flake8-isort

[options.package_data]
153957_theme =
    templates/*.html
    static/*/*

[flake8]
max-line-length = 120
ignore =
    W503

[isort]
line_length = 120
multi_line_output = 4
lines_between_types = 1
